ensure text truncates rather than breaking view

--- a/app/assets/stylesheets/hera/layout.scss
+++ b/app/assets/stylesheets/hera/layout.scss
@@ -75,6 +75,11 @@ hr {
   }
 }
 
+main {
+  max-width: 100vw;
+  width: 100%;
+}
+
 .row {
   padding: 0 0.75rem;
 
